# pi-rpc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  dprint.json  treefmt.toml
.pi/skills/update-pi-rpc-types/: SKILL.md
docs/: codegen.md  overview.md  pi-rpc-quirks.md  session-api.md  types.md
scripts/: presubmit.sh  release.sh
src/: lib.rs
src/session/: error.rs  impl_rpc_methods.rs  mod.rs  session.rs
src/types/: README.md  agent.rs  agent_session.rs  ai.rs  bash_executor.rs  compaction.rs  mod.rs  rpc_types.rs  source_info.rs  upstream.toml
tests/: integration.rs  readme_version.rs  serde_roundtrip.rs
