[package]
name = "pi-rpc-rs"
version = "0.1.2"
authors = ["Anton Geraschenko <gerascheko@gmail.com>"]
edition = "2024"
exclude = ["docs/", "scripts/"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geraschenko/pi-rpc-rs"
description = "A typed interface to pi's RPC mode (pi --mode rpc)"

[dependencies]
clap = { version = ">=4", features = ["derive"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
strum = { version = ">=0.28", features = ["derive"] }
tokio = { version = ">=1", features = ["full"] }
tokio-util = ">=0.7"

[dev-dependencies]
toml = ">=1.1.2"
