[package]
name = "pi-rpc-rs"
version = "0.1.3"
authors = ["Anton Geraschenko <gerascheko@gmail.com>"]
edition = "2024"
exclude = ["docs/", "scripts/", ".pi/"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geraschenko/pi-rpc-rs"
description = "A typed interface to pi's RPC mode (pi --mode rpc)"

[dependencies]
clap = { version = ">=4", features = ["derive"] }
log = ">=0.4"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
strum = { version = ">=0.28", features = ["derive"] }
tokio = { version = ">=1", features = ["full"] }
tokio-util = ">=0.7"

[dev-dependencies]
toml = ">=1.1.2"
